[desktop] gradle run vm argument adjustments
added all java.desktop/java.awt.* symbols and had to raise the minimum thread stack size to 768k to avoid a weird crash from awt.dll in windows