@@ -32,9 +32,10 @@ application {
     mainClass = 'com.limegroup.gnutella.gui.Main'
     applicationDefaultJvmArgs = [
             '-Djava.library.path=lib/native',
+            '--add-opens=java.desktop/java.awt=ALL-UNNAMED',
             '-Xms64m',
             '-Xmx512m',
-            '-Xss256k',
+            '-Xss768k',
             '-Dcom.sun.management.jmxremote.port=9595',
             '-Dcom.sun.management.jmxremote.ssl=false',
             '-Dcom.sun.management.jmxremote.authenticate=false',
@@ -42,11 +43,8 @@ application {
             '-agentlib:jdwp=transport=dt_socket,address=9696,server=y,suspend=n',
             '-Ddebug=1'
     ]
-    if (OperatingSystem.current().isWindows() || OperatingSystem.current().isMacOsX) {
-        applicationDefaultJvmArgs += ['--add-exports=java.desktop/com.apple.laf=ALL-UNNAMED']
-    }
     if (OperatingSystem.current().isMacOsX()) {
-        applicationDefaultJvmArgs += ['-Dsun.java2d.metal=true']
+        applicationDefaultJvmArgs += ['--add-exports=java.desktop/com.apple.laf=ALL-UNNAMED', '-Dsun.java2d.metal=true']
     }
 }
 
